--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button class="operator" id="subtract" >-</button>
         <button class="operator" id="multiply" >*</button>
         <button class="operator" id="divide" >/</button>
-        <button class="operator" id="equals" >=</button>
+        <button class="equals" id="equals" >=</button>
         <button class="clear" id="clear">clear</button>
     </div>
 
