--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
     </div>
 
     <div class="operationButtons">
+        <button class="decimal" id="decimal" >.</button>
         <button class="operator" id="add" >+</button>
         <button class="operator" id="subtract" >-</button>
         <button class="operator" id="multiply" >*</button>
         <button class="operator" id="divide" >/</button>
         <button class="equals" id="equals" >=</button>
+        <button class="backspace" id="backspace">backspace</button>  
         <button class="clear" id="clear">clear</button>
     </div>
 
