switch for backspace only works for input

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
+    <div class="wholeCalc">
     <div class="title">Calculator</div>
     <div class="display"></div>
     <div class="digitButtons">
@@ -33,6 +34,7 @@
         <button class="backspace" id="backspace">backspace</button>  
         <button class="clear" id="clear">clear</button>
     </div>
+</div>
 
 </body>
 </html>
